Fix blank page issue (Font Awesome path)

--- a/fronted/public/index.html
+++ b/fronted/public/index.html
@@ -19,9 +19,10 @@
     <!--Font Awesome-->
 
     <link
-      rel="stylesheet"
-      href="font-awesome/font-awesome-4.7.0/css/font-awesome.min.css"
-    />
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
+
 
     <title>React App</title>
   </head>
